--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #f0f0f0;
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
@@ -116,6 +116,7 @@
   * {
     @apply border-border outline-ring/50 scroll-smooth;
   }
+
   body {
     @apply bg-background text-foreground;
   }
